@@ -13,6 +13,7 @@
  - Support `std::optional<std::string_view>` etc. in `stream_to`. (#596)
  - Remove support for single-quoted array/composite elements.  No such thing!
  - Optimise out a kink in composite field parser.`
+ - Work around build warning in MinGW: include `winsock2.h` before `windows.h`.
 7.7.4
  - `transaction_base::for_each()` is now called `for_stream()`. (#580)
  - New `transaction_base::for_query()` is similar, but non-streaming. (#580)
